// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Move Zone Change Detection to Main Migration Remove from main.ts should handle multiline bootstrapModule call 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(
  AppModule
)
  .catch(err => console.error(err));
"
`;

exports[`Move Zone Change Detection to Main Migration Remove from main.ts should keep other options when removing applicationProviders 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule, {
  defaultEncapsulation: ViewEncapsulation.None,
})
  .catch(err => console.error(err));
"
`;

exports[`Move Zone Change Detection to Main Migration Remove from main.ts should not modify already migrated main.ts 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule)
  .catch(err => console.error(err));
"
`;

exports[`Move Zone Change Detection to Main Migration Remove from main.ts should remove only provideZoneChangeDetection and preserve other providers 1`] = `
"import { provideHttpClient } from '@angular/common/http';
import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule, {
  applicationProviders: [
    provideHttpClient(),
  ],
})
  .catch(err => console.error(err));
"
`;

exports[`Move Zone Change Detection to Main Migration Remove from main.ts should remove provideZoneChangeDetection and applicationProviders from main.ts 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule)
  .catch(err => console.error(err));
"
`;

exports[`Move Zone Change Detection to Main Migration Add to app.module.ts should add provideZoneChangeDetection to app.module.ts with empty providers array 1`] = `
"import { NgModule, provideZoneChangeDetection } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [provideZoneChangeDetection({ eventCoalescing: true })],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;

exports[`Move Zone Change Detection to Main Migration Add to app.module.ts should add provideZoneChangeDetection to app.module.ts with existing providers 1`] = `
"import { provideHttpClient } from '@angular/common/http';
import { NgModule, provideZoneChangeDetection } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { AppComponent } from './app.component';

@NgModule({
  declarations: [
    AppComponent
  ],
  imports: [
    BrowserModule
  ],
  providers: [
    provideHttpClient(),
    provideZoneChangeDetection({ eventCoalescing: true })
  ],
  bootstrap: [AppComponent]
})
export class AppModule { }
"
`;
